src/objects/Job_Application__c.object
<CustomObject>
    <description>Job applications for a position.</description>
    <fields>
        <fullName>Candidate_Qualified__c</fullName>
        <description>Indicates whether candidate&apos;s educational attainment meets or exceeds requirements for the position.</description>
        <formula>IF 
  (CASE ( Position__r.Educational_Requirements__c, &quot;High School&quot;, 1,
   &quot;College&quot;, 2, &quot;Masters&quot;, 3,
   &quot;PhD&quot;, 4, &quot;Post-doc&quot;, 5, 0) &gt;
  (CASE (  Candidate__r.Education__c , &quot;High School&quot;, 1,
   &quot;College&quot;, 2, &quot;Masters&quot;, 3,
   &quot;PhD&quot;, 4, &quot;Post-doc&quot;, 5, 0)),
   &quot;Not Qualified&quot;, &quot;Qualified&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether candidate&apos;s educational attainment meets or exceeds requirements for the position.</inlineHelpText>
        <label>Candidate Qualified?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The candidate who is applying for a position.</description>
        <inlineHelpText>The candidate who is applying for a position.</inlineHelpText>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The position which the Job Application is for.</description>
        <inlineHelpText>The position which the Job Application is for.</inlineHelpText>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the job application.</description>
        <inlineHelpText>The status of the job application.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidate__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Candidate_Qualified__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>Job Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>